--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <section class="container">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                        <div class="row p-5 d-flex align-items-center bg-success bg-gradient">
+                  <div class="carousel-item active mt-5">
+                        <div class="row p-5 d-flex align-items-center background-slid">
                             <div class="col-lg-7 col-md-6 col-sm-4 col-12">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
@@ -53,7 +53,7 @@
                         </div>                                                       
                     </div>
                     <div class="carousel-item">
-                        <div class="row p-5 d-flex align-items-center bg-success bg-gradient">
+                        <div class="row p-5 d-flex align-items-center background-slid">
                             <div class="col-lg-7 col-md-6 col-sm-4">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row p-5 d-flex align-items-center bg-success bg-gradient">
+                        <div class="row p-5 d-flex align-items-center background-slid">
                             <div class="col-lg-7 col-md-6 col-sm-4">
                                 <h1>X-Box for your living room</h1>
                                 <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
@@ -106,7 +106,7 @@
                     </div>
                     </div>
                     <div class="col-lg-4 col-4 col-md-6 col-12">
-                    <div class="p-3 border bg-success bg-gradient d-flex align-items-center justify-content-between rounded-3">
+                    <div class="p-3 border background-slid d-flex align-items-center justify-content-between rounded-3">
                         <h1 class="text-white">Shoes</h1>
                         <img src="images/categories/shoes.png" alt="">
                     </div>
