--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 </div>
               </div>
         </section>
-        <section style="height: 300px;" class="container bg-info d-flex justify-content-center align-items-center rounded-3">
+        <section style="height: 300px;" class="container background-slid d-flex justify-content-center align-items-center rounded-3">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
             <p>Get updates on sales, specials and more</p>
@@ -219,7 +219,7 @@
         </section>
         <br>
     </main>
-    <footer class= "mt-5 text-center">
+    <footer class= "mt-5 text-center ">
         <p><small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
     </footer>
 
